[package]
name = "plasmod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
bio = "*"
bio-types = "*"
clap = { version = "*", features = ["derive"] }
env_logger = "*"
log = "*"
rust-htslib = "*"
